--- a/package.json
+++ b/package.json
@@ -13,6 +13,15 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.35.1",
+        "sass-loader": "^12.1.0"
+    },
+    "dependencies": {
+        "@vue/compiler-sfc": "^3.1.2",
+        "vue": "^3.1.2",
+        "vue-loader": "^16.2.0",
+        "vuex": "^3.6.2"
     }
 }
