--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "bootstrap-icons": "^1.5.0",
         "vue": "^3.1.2",
         "vue-loader": "^16.2.0",
+        "vue-router": "^4.0.10",
         "vuex": "^4.0.2"
     }
 }
