--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue": "^3.1.2",
         "vue-loader": "^16.2.0",
         "vue-router": "^4.0.10",
+        "vue-star-rating": "^2.1.0",
         "vuex": "^4.0.2"
     }
 }
