--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,15 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master",
+        "barryvdh/laravel-debugbar": "^3.6",
         "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "roave/security-advisories": "dev-master"
     },
     "autoload": {
         "psr-4": {
